# nornir-infrahub

./: .gitignore  .yamllint.yml  README.md  pyproject.toml  tasks.py
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  publish-to-pypi.yml
examples/: nornir_inventory.py  nornir_tasks.py
nornir_infrahub/plugins/inventory/: infrahub.py
nornir_infrahub/plugins/tasks/: artifact.py
tests/unit/: conftest.py  test_inventory.py
