[tool.poetry]
name = "nornir-infrahub"
version = "0.2.3"
description = "Nornir plugin for Infrahub"
authors = ["OpsMill <info@opsmill.com>"]
readme = "README.md"
packages = [{include = "nornir_infrahub"}]
license = "Apache-2.0"
homepage = "https://opsmill.io"
repository = "https://opsmill.io"
documentation = "https://opsmill.io"

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.plugins."nornir.plugins.inventory"]
"InfrahubInventory" = "nornir_infrahub.plugins.inventory.infrahub:InfrahubInventory"

[tool.poetry.dependencies]
python = "^3.8, <3.12"
infrahub-sdk = "^0,>=0.2"
ruamel-yaml = "^0.18.5"
nornir = "^3.4.1"
nornir-utils = "^0.2.0"
python-slugify = "^8.0.1"
pydantic = ">=1.7.4,!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "^0.1"
mypy = "^1.6"
pytest-asyncio = "*"
types-python-slugify = "*"
invoke = "^2.2.0"
yamllint = "^1.32.0"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError()"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]
filterwarnings = [
    "ignore:pkg_resources is deprecated",
]
addopts = "-vs"


[tool.mypy]
pretty = true
ignore_missing_imports = true

[tool.ruff]

select = [
    "C90",      # mccabe
    "ASYNC",    # flake8-async
    "DTZ",      # flake8-datetimez
    "E",        # style errors
    "F",        # flakes
    "I",        # isort
    "ICN",      # flake8-import-conventions
    "TCH",      # flake8-type-checking
    "T10",      # flake8-debugger
    "PL",       # pylint
    "Q",        # flake8-quotes
    "W",        # pycodestyle
    "YTT",      # flake8-2020
]

line-length = 120

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.isort]
known-third-party = ["nornir_infrahub"]

[tool.ruff.per-file-ignores]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
