[tool.poetry]
name = "nornir-infrahub"
version = "0.4.0"
description = "Nornir plugin for Infrahub"
authors = ["OpsMill <info@opsmill.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://opsmill.com"
repository = "https://github.com/opsmill/nornir-infrahub"
documentation = "https://docs.infrahub.app/"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [{ include = "nornir_infrahub" }]

[tool.poetry.plugins."nornir.plugins.inventory"]
"InfrahubInventory" = "nornir_infrahub.plugins.inventory.infrahub:InfrahubInventory"

[tool.poetry.dependencies]
python = "^3.9, <3.13"
infrahub-sdk = { version = "^0,>=0.14.0", extras = ["tests"] }
ruamel-yaml = "^0.18.5"
nornir = "^3.4.1"
nornir-utils = "^0.2.0"
python-slugify = "^8.0.1"
pydantic = ">=1.7.4,!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "0.3.3"
mypy = "*"
pytest-asyncio = "^0.21.1"
types-python-slugify = "*"
invoke = "2.2.0"
yamllint = "*"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "raise NotImplementedError()"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore:pkg_resources is deprecated"]
addopts = "-vs"


[tool.mypy]
pretty = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C90",   # mccabe
    "ASYNC", # flake8-async
    "DTZ",   # flake8-datetimez
    "E",     # style errors
    "F",     # flakes
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "TCH",   # flake8-type-checking
    "T10",   # flake8-debugger
    "PL",    # pylint
    "Q",     # flake8-quotes
    "W",     # pycodestyle
    "YTT",   # flake8-2020
]


[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-third-party = ["nornir_infrahub"]

[tool.ruff.lint.per-file-ignores]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
